--- a/style.css
+++ b/style.css
@@ -5,58 +5,131 @@
 }
 .container{
     display:grid;
-    margin:4px;
+  /*  margin:4px;*/
+
 }
 .partie1{
     border:1px solid;
+    /*border:none;*/
     margin:4px;
     grid-column-start: 2;
     grid-column-end: 4;
     display:grid;
    grid-template-rows: 2fr 2fr 1fr 2fr 1fr 2fr;
+   
+   
 } 
 
-.b1{
-   
-  display:flex;
-  justify-content: space-around;
-  bottom:20px;
+.b1{ 
+display:flex;
+justify-content: space-around;
+margin:0px auto;
+    
 }
 button{
+  
     font-size:0.9em;
+
 }
 .partie2{
    border:1px solid;
-    margin:4px;
-    grid-row:1/3;
+   border:none;
+    grid-row:1/6;
     display:grid;
     grid-template-columns: 2fr 1fr;
+    background-color:#38bdf8;
+    color:#fff;
+    grid-template-rows:2fr 1fr 1fr 1fr;
     
 }
 ul li{
     list-style-type: none;
     font-weight: bold;
+    
+    
+
 }
 ul span{
     font-size:1em;
     font-weight:bold;
+    
 }
 .partie3{
     border:1px solid;
-    margin:4px;
+    border:none;
     display:grid;
     grid-template-columns:2fr 2fr 1fr;
     grid-template-rows: 2fr 2fr;
+    padding:30px;
+    background-color: #e7e5e4;
+    
+       
 }
+h1{
+    font-weight: bold;
+    position: absolute;
+    /*top:25%;*/
+    top:9em;
+    font-size:15px;;
+    
+}
+span{
+    font-weight: bold;
+}
+
+.souspartie1{
+display:grid;
+grid-template-columns: 1fr 1fr;
+gap:10px;
+
+}
+
 .card1{
     border:1px solid;
     margin:4px;
+    width: 250px;
+    padding:15px;
+    display:grid;
+    grid-template-rows:1fr;  
+    border-radius: 5px;  
+    border-color:white; 
+    border-left-color: #fb923c; 
+    border-left-width: 5px;
+    background-color: #fff;
+}
+.souspartie2{
+    display: grid;
+    gap:10px; 
+    margin-left:1em;
 }
 .card2{
     border:1px solid;
     margin:4px;
+    width:250px;
+    height:400px;
+    border-radius: 5px;
+    padding:0.5em;
+    align-self: center;
+    background-color: white;
+    border-color: white;
+    
+    
+    
+    
 }
+
 .card3{
     border:1px solid;
     margin:4px;
+    width:250px;
+    height:250px;
+    border-radius:5px;
+    padding:1em;
+    text-align:center;
+    background-color:white;
+    border-color: white;
+
+}
+p{
+    font-weight: bold;
 }
