--- a/style.css
+++ b/style.css
@@ -5,17 +5,16 @@
 }
 .container{
     display:grid;
-  /*  margin:4px;*/
 
 }
 .partie1{
     border:1px solid;
-    /*border:none;*/
-    margin:4px;
+    border:none;
     grid-column-start: 2;
     grid-column-end: 4;
     display:grid;
    grid-template-rows: 2fr 2fr 1fr 2fr 1fr 2fr;
+   background-color: #fafafa;
    
    
 } 
@@ -23,12 +22,16 @@
 .b1{ 
 display:flex;
 justify-content: space-around;
-margin:0px auto;
+position:relative;
+top:5em;
     
 }
 button{
-  
-    font-size:0.9em;
+     background-color:#38bdf8;
+     color:#ffff;
+     border-radius:5px;
+     border-color: #38bdf8;
+    font-size:1em;
 
 }
 .partie2{
@@ -70,6 +73,7 @@ h1{
     position: absolute;
     /*top:25%;*/
     top:9em;
+    margin-left:5px;
     font-size:15px;;
     
 }
@@ -95,7 +99,7 @@ gap:10px;
     border-color:white; 
     border-left-color: #fb923c; 
     border-left-width: 5px;
-    background-color: #fff;
+    background-color: #fafafa;
 }
 .souspartie2{
     display: grid;
@@ -110,7 +114,7 @@ gap:10px;
     border-radius: 5px;
     padding:0.5em;
     align-self: center;
-    background-color: white;
+    background-color: #fafafa;
     border-color: white;
     
     
@@ -126,7 +130,7 @@ gap:10px;
     border-radius:5px;
     padding:1em;
     text-align:center;
-    background-color:white;
+    background-color:#fafafa;
     border-color: white;
 
 }
